--- a/virtual_police_station/policeSignUp.html
+++ b/virtual_police_station/policeSignUp.html
@@ -46,7 +46,6 @@ button:hover {
 }
 
 
-
 /* Float cancel and signup buttons and add an equal width */
  .signupbtn {
   float: left;
@@ -58,7 +57,6 @@ button:hover {
   padding: 16px;
 }
 
-
 /* Clear floats */
 .clearfix::after {
   content: "";
@@ -66,11 +64,9 @@ button:hover {
   display: table;
 }
 
- 
-
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
+ .signupbtn {
      width: 100%;
   }
   form{
@@ -80,26 +76,20 @@ button:hover {
 </style>
 <body>
 
-<form action="/action_page.php">
+<form action="/">
   <div class="container">
-    <h1 style="color: #4CAF50;">Sign Up</h1>
-    <p>Please fill in this form to create an account.</p>
+    <h1 style="color: #4CAF50;">Register <span style="color: blue;">Police</span> Station</h1>
+    <p>Please fill in this form to Rigister Police Station.</p>
     <hr>
 
-    <label for="name"><b>Name</b></label>
-    <input type="text" placeholder="Enter Name" name="name" required>
+    <label for="station-name"><b>Station Name</b></label>
+    <input type="text" placeholder="Enter Station Name" name="station-name" required>
 
-    <label for="f-name"><b>Father's Name</b></label>
-    <input type="text" placeholder="Enter Father's Name" name="f-name" required>
-
-    <label for="p-no"><b>Phone Number</b></label>
-    <input type="number" placeholder="Enter Phone Number" name="p-no" required>
+    <label for="station-p-no"><b>Station Phone Number</b></label>
+    <input type="number" placeholder="Enter Station Phone Number" name="station-p-no" required>
     
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
-
-    <label for="aadhaar-no"><b>Aadhaar Number</b></label>
-    <input type="number" placeholder="Enter Aadhaar Number" name="aadhaar-no" required>
+    <label for="station-email"><b>Station Email ID</b></label>
+    <input type="text" placeholder="Enter Station Email ID" name="staton-email" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
